fix alignment readmore button

--- a/jade/assets/stylesheets/style.css
+++ b/jade/assets/stylesheets/style.css
@@ -11,6 +11,44 @@ p {
     margin-right:40px;
 }
 
+/* ##########################
+    Header - 'advanced'
+#########################*/
+ header {
+        width: 100%;
+        height: 150px;
+        overflow: hidden;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 999;
+        background-color: #1e90ff;
+        -webkit-transition: height 1.0s;
+        -moz-transition: height 1.0s;
+        -ms-transition: height 1.0s;
+        -o-transition: height 1.0s;
+        transition: height 1.0s;
+}
+
+/* title in regular mode */
+header  .blogtitle {
+         font-size: 55px;
+         margin-top: 50px;
+         }
+
+/* new height when in smaller version */
+header.smaller {
+    height: 75px;
+}
+
+/* new blog title size when in small version */
+header.smaller  .blogtitle {
+        color: white;
+         font-size: 46px;
+         margin-top: 20px;
+}
+
+
 #headerurl{
     color: white;
 }
@@ -33,18 +71,6 @@ p {
     margin-bottom: 20px;
 }
 
-@media only screen and (max-width: 576px) {
-         .blogtitle {
-         font-size: 32px;
-         padding-top: 90px;
-         margin-left: 10%;
-         text-overflow: ellipsis;
-           white-space: nowrap;
-          overflow: hidden;
-         }
-}
-
-
 @media only screen and (max-width: 720px) {
 
 /*
@@ -57,22 +83,6 @@ p {
         height: 100%;
         margin-bottom:30px;
     }
-         /*basic header */
-         #header {
-             position: relative;
-             background-color: #1e90ff;
-             color: #ffffff;
-             width: 100%;
-        }
-
-         .blogtitle {
-         font-size: 42px;
-         padding-top: 90px;
-         margin-left: 5%;
-         text-overflow: ellipsis;
-           white-space: nowrap;
-          overflow: hidden;
-         }
 
          .text-left-title {
              padding-left: 40px;
@@ -104,24 +114,10 @@ p {
 
     .container-fluid{
         margin:0;
-        padding-top: 200px;
+        padding-top: 150px;
         height: 100%;
         margin-bottom:30px;
     }
-         /*basic header */
-         #header {
-             position: fixed;
-             background-color: #1e90ff;
-             color: #ffffff;
-             width: 100%;
-        }
-
-         .blogtitle {
-         font-size: 55px;
-         padding-top: 90px;
-         margin-left: 15%;
-         }
-
          /* margins of text */
          .row {
            margin-left: 10%;
@@ -155,7 +151,6 @@ p {
      background-color: #1e90ff;
      color: #ffffff;
      height: 100%;
-      margin-top:15px;
      overflow: hidden;
  }
 
@@ -189,7 +184,7 @@ article {
     color: #fff;
     background-color: #1e90ff;
     padding: 10px;
-    margin-top: -45px;
+    margin-top: -15px;
     text-align: center;
 
 }
